[pbr]
skip_authors = True
skip_changelog = True

[metadata]
name = maas2netbox
author = Stamatis Katsaounis
author-email = skatsaounis@admin.grnet.gr
summary = Helper Scripts to update NetBox Information from MaaS
description-file = README.md

[files]
packages =
    maas2netbox

[entry_points]
console_scripts =
    maas2netbox = maas2netbox.cli:main

[bdist_wheel]
universal = 1
